--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@
 }
 
 .main-content {
-  margin-left: 250px;
-  margin-top: 60px;
+  /* margin-left: 170px; */
   padding: 20px;
   min-height: calc(100vh - 60px);
 }
@@ -17,14 +16,14 @@
 /* Tablet Screens (768px - 1024px) */
 @media (max-width: 1024px) {
   .main-content {
-    margin-left: 200px;
+    margin: 20px;
     padding: 15px;
   }
 }
 
 @media (max-width: 1024px) {
   .main-content {
-    margin-left: 200px;
+    margin: 20px;
     padding: 15px;
   }
 }
@@ -33,6 +32,7 @@
 @media (max-width: 768px) {
   .main-content {
     margin-left: 0;
+    margin-right: 0;
     padding: 15px;
     margin-top: 50px; /* Adjust if mobile header is smaller */
   }
